--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Mystery fiction'
 - !lcc 'PR'
+- GITenberg
 title: The House by the Lock
 url: http://www.gutenberg.org/ebooks/31228
